# gnu-gdbm

./: .cvsignore  .gitignore  ChangeLog  ChangeLog.cvs  Makefile.am  Makefile.in  NEWS  NOTE-WARNING  README  README-alpha  README-hacking  THANKS  aclocal.m4  autoconf.h.in  bootstrap  configure  configure.ac
build-aux/: ltmain.sh
compat/: Makefile.am  Makefile.in  close.c  dbmclose.c  dbmdelete.c  dbmdirfno.c  dbmfetch.c  dbminit.c  dbmopen.c  dbmpagfno.c  dbmrdonly.c  dbmseq.c  dbmstore.c  delete.c  fetch.c  ndbm.h  seq.c  store.c
doc/: .cvsignore  .gitignore  Config  Makefile.am  Makefile.in  fdl.texi  gdbm.3  gdbm.texi  gdbm.texinfo  gdbm_load.1  gdbmtool.1  gendocs.sh  gendocs_template  html.init  stamp-vti  version.texi
export/: .cvsignore  Makefile.am  Makefile.in  export.c
po/: .cvsignore  Makefile  Makevars  POTFILES.in
src/: .cvsignore  Makefile.am  Makefile.in  base64.c  bucket.c  datconv.c  debug.c  err.c  extern.h  falloc.c  findkey.c  flatfile.c  fullio.c  gdbm.h.in  gdbm.magic  gdbm.proto  gdbm.proto2  gdbm_dump.c  gdbm_load.c  gdbmapp.h  gdbmclose.c  gdbmconst.h  gdbmcount.c  gdbmdefs.h  gdbmdelete.c  gdbmdump.c  gdbmerrno.c  gdbmerrno.h  gdbmexists.c  gdbmexp.c  gdbmfdesc.c  gdbmfetch.c  gdbmimp.c  gdbmload.c  gdbmopen.c  gdbmreorg.c  gdbmseq.c  gdbmsetopt.c  gdbmstore.c  gdbmsync.c  (+23 more)
tests/: .cvsignore  .gitignore  Makefile.am  atlocal.in  blocksize00.at  blocksize01.at  blocksize02.at  cloexec00.at  cloexec01.at  cloexec02.at  cloexec03.at  create00.at  dbmcreate00.at  dbmcvt.at  dbmdel00.at  dbmdel01.at  dbmdel02.at  dbmfetch00.at  dbmfetch01.at  dbmfetch02.at  dbmfetch03.at  delete00.at  delete01.at  delete02.at  dtload.c  dump00.at  dump01.at  dump02.at  dump03.at  dump04.at  fetch00.at  fetch01.at  gdbmtool00.at  gdbmtool01.at  gdbmtool02.at  gdbmtool03.at  gtdel.c  gtdump.c  gtfetch.c  gtload.c  (+8 more)
